FTP, SFTP, WebDAV, Cloud Files, Google Docs, Windows Azure & Amazon S3 Browser for Mac & Windows.
http://cyberduck.ch/

Changelog. Last modified: $Date$

4.0 [http://trac.cyberduck.ch/milestone/4.0]
- [Feature] Version for Microsoft Windows XP, Windows Vista & Windows 7.
- [Feature] Replaced protocol implementation (FTP)
- [Feature] Connecting to Windows Azure Blob Storage (Azure) (#3938)

3.8.1 [http://trac.cyberduck.ch/milestone/3.8.1]
- [Bugfix] Fails to display custom language preference (#5500)
- [Bugfix] Clear data channels not supported (#5509) (FTP-TLS)
- [Bugfix] Some files not displayed (#5505) (FTP)
- [Bugfix] Wrong file size reported for uploads (#5503)

3.8 [http://trac.cyberduck.ch/milestone/3.8]
- [Feature] CDN configuration with custom origin server (Amazon CloudFront)
- [Feature] CDN invalidation requests (Amazon CloudFront) (#5197)
- [Feature] Connecting to Swift Storage (Openstack)
- [Feature] FireFTP Bookmarks Importer
- [Feature] CrossFTP Bookmarks Importer
- [Feature] Perform MD5 hash calculation during upload (#5186) (S3, Cloudfiles)
- [Feature] Rename existing files on upload or download (#5117)
- [Feature] Show last access timestamp in history (#3805)
- [Feature] Synchronize comparing MD5 checksum of file (S3, Cloudfiles, Dropbox, Azure)
- [Feature] Display decimal file size (OS X 10.6) #3771)
- [Feature] Display relative date in browser (OS X 10.6)
- [Bugfix] Slow SFTP transfers (#185)
- [Bugfix] Reduced upload preparation time for thousands of files
- [Bugfix] Support for S3Fox directory placeholders (S3)
- [Bugfix] Support for Google Storage Console directory placeholders (S3)
- [Bugfix] Support for s3sync.rb directory placeholders (#5374) (S3)
- [Bugfix] Connect through HTTP/HTTPS proxy (#5379) (Google Docs)
- [Bugfix] Changing storage class fails (S3)
- [Bugfix] Apply ACLs recursively (S3)
- [Bugfix] Apply custom HTTP headers recursively (S3)
- [Bugfix] Interoperability (#2609, #4231, #2915) (WebDAV)