@@ -40,14 +40,31 @@
 </p>
 
 
-<strong><a href=
-                   "http://trac.cyberduck.ch/milestone/4.0">Version 4.0</a></strong><br/>
+<strong><a href="http://trac.cyberduck.ch/milestone/4.0">Version 4.0</a></strong><br/>
 
 <ul>
     <li>[Feature] Version for Microsoft Windows XP, Windows Vista & Windows 7.</li>
     <li>[Feature] Replaced protocol implementation (FTP)</li>
     <li>[Feature] Connecting to Windows Azure Blob Storage (Azure) (<a
             href="http://trac.cyberduck.ch/ticket/3938">#3938</a>)
+    </li>
+    <li>[Bugfix] Limit number of concurrent transfers (<a
+            href="http://trac.cyberduck.ch/ticket/5539">#5539</a>)
+    </li>
+    <li>[Bugfix] Dragging into topmost folder in browser (<a
+            href="http://trac.cyberduck.ch/ticket/1945">#1945</a>)
+    </li>
+    <li>[Bugfix] ACLs getting dropped when updating metadata (S3) (<a
+            href="http://trac.cyberduck.ch/ticket/5571">#5571</a>)
+    </li>
+    <li>[Bugfix] Unicode normalization for filenames in upload (<a
+            href="http://trac.cyberduck.ch/ticket/5162">#5162</a>)
+    </li>
+    <li>[Bugfix] Duplicate file breaks editing (<a
+            href="http://trac.cyberduck.ch/ticket/5524">#5524</a>)
+    </li>
+    <li>[Bugfix] Large transfer history causes slowdown (<a
+            href="http://trac.cyberduck.ch/ticket/2889">#2889</a>)
     </li>
 </ul>
 
